#add the m4/ directory to the automake include directories
ACLOCAL_AMFLAGS = -I m4



SUBDIRS = \
	pkgconfig \
	src \
	docs 

DIST_SUBDIRS = \
	pkgconfig \
	src \
	docs \
	m4 

EXTRA_DIST = \
	docs \
	scripts \
	native-grid.spec \
	native-grid.spec.in \
	version.m4 \
	version.sh \
	init.sh \
	autogen.sh \
	depcomp
